更改页面内容(添加主办单位)

--- a/src/main/resources/templates/page/en/about.html
+++ b/src/main/resources/templates/page/en/about.html
@@ -83,7 +83,7 @@ var _hmt = _hmt || [];
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">About</div>
         <div class="public_p pb-20 pl-30">
 					<p>
-					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Engineering,
+					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Engineering and Maejo University (Thailand),
 						will be held in Bangkok, Thailand during December 26-28, 2019. 
 					</p>
 					<p>
@@ -179,6 +179,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
+						<p>Maejo University (Thailand)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
