--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -105,7 +105,7 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">About</div>
 				<div class="public_p pl-30">
         <p>
-          <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Engineering,
+          <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Engineering and Maejo University (Thailand),
 					will be held in Bangkok, Thailand during December 26-28, 2019. ICABST2019 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
 					The conference certification will be issued to all attendees including listeners. 
 					<br/>
@@ -174,6 +174,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
+						<p>Maejo University (Thailand)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
