--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -83,7 +83,9 @@ var _hmt = _hmt || [];
       <div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px;">Organizers</div>
       <div class="public_p pb-20 pl-30 lh-40">
         <p>
-          <strong>Asia-Pacific Association on Natural Science and Engineering</strong>
+          <strong>Asia-Pacific Association on Natural Science and Engineering<br/>
+					Maejo University (Thailand)
+					</strong>
         </p>
       </div>
 
@@ -192,6 +194,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
+						<p>Maejo University (Thailand)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
