--- a/src/main/resources/templates/page/en/program.html
+++ b/src/main/resources/templates/page/en/program.html
@@ -192,6 +192,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
+						<p>Maejo University (Thailand)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
