--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -328,9 +328,9 @@ var _hmt = _hmt || [];
                                 <select name="issue" lay-filter="aihao">
                                     <option value="0">Please Select</option>
 									<option value="Session 1">1. Molecular Biology</option>
-									<option value="Session 2">2. Biomedicine, Biopharmaceuticals and Pharmacology</option>
+									<option value="Session 2">2. Photobiology and Photochemistry</option>
 									<option value="Session 3">3. Biomechanics and Biomechanical Engineering</option>
-									<option value="Session 4">4. Biomaterials and Biomedical materials</option>
+									<option value="Session 4">4. Biomedicine, Biopharmaceuticals and Pharmacology</option>
 									<option value="Session 5">5. Biochemistry</option>
 									<option value="Session 6">6. Agricultural, Food, Animal and Plant Science</option>
 									<option value="Session 7">7. Other Related Topics</option>
@@ -407,6 +407,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
+			<p>Maejo University (Thailand)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
