--- a/src/main/resources/templates/page/en/venue.html
+++ b/src/main/resources/templates/page/en/venue.html
@@ -81,7 +81,7 @@ var _hmt = _hmt || [];
     <div class="page_left col-6-6" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">&nbsp;&nbsp;Venue</div>
       <div class="public_p pb-20 pl-30">
-				<p class="f-b">Hotel Name: The Tawana Bangkok, <a class="pointer" href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a><br/>
+				<!--p class="f-b">Hotel Name: The Tawana Bangkok, <a class="pointer" href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a><br/>
 				Address: 80 Surawongse Road, Bangrak, Bangkok 10500 Thailand<br/>
 				Conference Room: Murano Room<br/>
 				You could book the room by <a href="https://www.booking.com/hotel/th/tawana.zh-cn.html?aid=1633942;label=baidu-brand-list1;sid=a0ff97e5e37d5edbc4ed57d5453febf3;dest_id=-3414440;dest_type=city;dist=0;hapos=1;hpos=1;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1560999642;srpvid=de89152dd7440131;type=total;ucfs=1&#hotelTmpl" style="color: #102cf7" target="_blank"><u>www.booking.com</u></a>
@@ -95,7 +95,7 @@ var _hmt = _hmt || [];
 						<li><img src="../img/meeting-events-01.jpg" height="400px"><img src="../img/meeting-events-02.jpg" height="400px"><img src="../img/meeting-events-03.jpg" height="400px" width="299px"><img src="../img/meeting-events-04.jpg" height="400px" width="601px"></li>
 						<div class="clear"></div>
 						</ul>
-				</div>
+				</div!-->
       </div>
     <div style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px">
 			<div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">Path</div>
