更改页面内容(添加主办单位)

--- a/src/main/resources/templates/page/cn/about.html
+++ b/src/main/resources/templates/page/cn/about.html
@@ -85,7 +85,7 @@ var _hmt = _hmt || [];
             <strong>2019国际前沿生物科学与技术国际会议（ICABST2019）会议通知</strong>
           </p>
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会主办。
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会与泰国梅州大学(Maejo University)主办。
           </p>
           <p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、
@@ -160,6 +160,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
