--- a/src/main/resources/templates/page/cn/organization.html
+++ b/src/main/resources/templates/page/cn/organization.html
@@ -82,7 +82,8 @@ var _hmt = _hmt || [];
       <div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px;">主办单位</div>
       <div class="public_p pb-20 pl-30 lh-40">
         <p>
-          <strong>亚太自然科学与工程协会(APANSE)</strong>
+          <strong>亚太自然科学与工程协会(APANSE)<br/>
+					泰国梅州大学(Maejo University)</strong>
         </p>
 
 
@@ -193,6 +194,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
