--- a/src/main/resources/templates/page/cn/submit.html
+++ b/src/main/resources/templates/page/cn/submit.html
@@ -294,9 +294,9 @@ var _hmt = _hmt || [];
                                 <select name="issue" lay-verify="required" lay-filter="aihao">
                                     <option value="0"></option>
 									<option value="Session 1">1. 分子生物学</option>
-									<option value="Session 2">2. 生物医学与制药</option>
-									<option value="Session 3">3. 生物力学与工程</option>
-									<option value="Session 4">4. 生物及医学材料</option>
+									<option value="Session 2">2. 光生物学与光化学 </option>
+									<option value="Session 3">3. 生物力学与生物力学工程 </option>
+									<option value="Session 4">4. 生物医学、生物制药和药理学 </option>
 									<option value="Session 5">5. 生物化学</option>
 									<option value="Session 6">6. 农业食品及动植物</option>
 									<option value="Session 7">7. 其他相关领域应用</option>
@@ -375,6 +375,7 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
+			<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
