--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -45,13 +45,14 @@ var _hmt = _hmt || [];
     <header class="img">
       <div>
         <div class="w-1200">
-          <div style="width:25%;height:200px; float:left;display:inline-block;">
+          <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
+						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
           </div>
-          <div style="width:75%;height:200px; float:left;display:inline-block;">
+          <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference on Advances in Biological<br/>
-							Science and Technology<br/>
+              International Conference on Advances in<br/>
+							Biological Science and Technology<br/>
 							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
           </div>
@@ -198,6 +199,7 @@ var _hmt = _hmt || [];
     <div class="f-20 f-b pl-10 background1">Supporters / Media Partners</div>
     <ul>
       <li><img src="../img/1--APANSE.png"/></li>
+			<li><img src="../img/MaejoUniversityLogo.png"/></li>
       <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
       <!--li><img src="../img/3--cnki-logo.gif"/></li>
       <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
