--- a/src/main/resources/templates/page/cn/venue.html
+++ b/src/main/resources/templates/page/cn/venue.html
@@ -82,8 +82,15 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20 pl-30">
 				<p class="f-b">酒店名称：曼谷塔瓦纳酒店 (The Tawana Bangkok, <a href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a>)<br/>
 				地址：80 Surawongse Road, Bangrak, Bangkok 10500 Thailand<br/>
-				会议室: Murano Room<br/>
-				可通过Booking.com预定酒店房间: <a href="https://www.booking.com/hotel/th/tawana.zh-cn.html?aid=1633942;label=baidu-brand-list1;sid=a0ff97e5e37d5edbc4ed57d5453febf3;dest_id=-3414440;dest_type=city;dist=0;hapos=1;hpos=1;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1560999642;srpvid=de89152dd7440131;type=total;ucfs=1&#hotelTmpl" style="color: #102cf7" target="_blank"><u>www.booking.com</u></a>
+				会议室: Murano Room<br/><br/>
+				</p>
+				<p>
+					预订房间: 参会者可通过联系酒店负责人Ms. Wassana Thoolkaew (wassana@tawanabangkok.com)来预定房间，该酒店将为本届会议的参会者提供特殊折扣，详情如下。<br/>
+					Superior room (28 sq.m): THB 2100++(single)/2400++(double)<br/>
+					Executive room (34 sq.m): THB 2500++(single)/2800++(double) <br/>
+					Deluxe Room (34 sq.m): THB 2700++(single)/3000++(double)<br/>
+					或您也可通过Booking.com预定该酒店或其他酒店的房间。<br/>
+					如需我方帮您预定酒店住宿，请尽早告知。<br/><br/>
 				</p>
 				<p>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;位于曼谷Surawongse路的“曼谷塔瓦纳酒店”不仅以其高标准的高效率和友好的服务而闻名，而且还以其最优越的市中心位置而闻名于世。对于休闲和度假客人来说，酒店的中心位置提供了方便的旅行机会，可以到达曼谷大多数最好的购物、观光景点和娱乐设施，还可以步行到曼谷的天车BTS Silom (Saladaeng站)和MRT地铁Rama 4 (Samyan站)。为了满足商务旅客的需求，曼谷塔瓦纳酒店提供了无与伦比的优势。大堂设备齐全的商务中心为繁忙的行政人员提供了秘书和会议室开会的便利。整个酒店都提供高速WiFi (无线互联网)，允许在客房、泳池边、餐厅或酒店大堂进行“连接”。在附近的高速公路上，可以方便地到达曼谷的会议和展览中心，以及距曼谷仅35公里的素万那普国际机场。
