--- a/src/main/resources/templates/page/cn/about.html
+++ b/src/main/resources/templates/page/cn/about.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
+						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -104,8 +104,8 @@ var _hmt = _hmt || [];
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;报到签到：A. 2019年12月26日 15:00-17:00</br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B. 2019年12月27日 8:00-8:40
 					</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;摘要截止：2019年10月20日</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注册截止：2019年10月31日（逾期按照后期注册处理—后期注册费用较高)</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;摘要截止：2019年11月20日</p>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注册截止：2019年11月30日</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全文截止：全文长年均可投稿，本批次7月30日截止<br />&nbsp;</p>
 					
 					<p><strong>有关签证信息、泰国当地交通及住宿信息，请参考<a title="会议地点" class="pointer" href="/cn/venue" style="color: #102cf7" target="_blank"><u>会议地点</u></a>中相关内容</strong></p>
@@ -150,17 +150,16 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>摘要投稿: 2019年10月20日截止</p>
+            <p>摘要投稿: 2019年11月20日截止</p>
             <p>全文投稿: 本批次7月30日截止</p>
             <p>会议日期:2019年12月26日-28日</p>
-						<p>参会注册截止: 2019年10月31日</p>
+						<p>参会注册截止: 2019年11月30日</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
-						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
