--- a/src/main/resources/templates/page/cn/organization.html
+++ b/src/main/resources/templates/page/cn/organization.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
+						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -83,23 +83,17 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20 pl-30 lh-40">
         <p>
           <strong>亚太自然科学与工程协会(APANSE)<br/>
-					泰国梅州大学(Maejo University)</strong>
         </p>
 
 
       </div>
 
 
-      <!--div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px;">会议主席</div>
+      <!--div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px;">Conference Chair/Co-chairs</div>
       <div class="public_p pb-20">
         <p>
-					<strong>Conference Chair:</strong>
-				</p>
-        <p>
-          <strong>Program Chair:</strong>
-        </p>
-        <p>
-					<strong>Honorary Chair:</strong>
+					<strong>Conference Chair:</strong> 
+					<strong>Conference Co-Chair:</strong> Prof. Hadi Shafiee, Brigham and Women's Hospital, Harvard Medical School, USA
 				</p>
       </div>
 			
@@ -126,6 +120,7 @@ var _hmt = _hmt || [];
 					Khalid Rehman Hakeem, Universiti Putra, Malaysia <br/>
 					KIKUCHI Masumi, University of Tokyo, Japan <br/>
 					Nagendra Kumar Kaushik, Kwangwoon University, Korea <br/>
+					Pornpun Vivithanaporn, Mahidol University, Thailand <br/>
 					Suhaimi Suratman, Institute of Oceanography and Environment, Malaysia <br/>
 					Thi Thuy Pham, VNU-University of Science, Vietnam <br/>
 			    </p>
@@ -138,13 +133,15 @@ var _hmt = _hmt || [];
 					Ahmed Saber Abu-zaiton, Al-albayt University, Jordan <br/>
 					Alex Liu, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					AMAL AL-ABOUDI, University of Jordan, Jordan <br/>
+					Ayush Dogra, Panjab University, India <br/>
 					Ivaylo Christov, Institute of Biophysics and Biomedical Engineering, Bulgaria <br/>
 					Kesaven Bhubalan, Universiti Malaysia Terengganu, Malaysia <br/>
 					Le Nguyen Quoc Khanh, Nanyang Technological University, Singapore <br/>
 					Leyser Rodrigues Oliveira University Centre of Formiga, Brazil <br/>
 					Midhat Nabil Ahmad Salimi, Universiti Malaysia Perlis (UniMAP), Malaysia <br/>
 					Pajaree Thongsanit, Naresuan University, Thailand <br/>
-					Palanisamy Sivanandy, International Medical University(IMU), Malaysia<br/>
+					Palanisamy Sivanandy, International Medical University(IMU), Malaysia <br/>
+					Reshma Rani, Amity University, India <br/>
 					Roshni Paul, Birmingham City University, UK
         </p>
 				</div>
@@ -185,17 +182,16 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>摘要投稿: 2019年10月20日截止</p>
+            <p>摘要投稿: 2019年11月20日截止</p>
             <p>全文投稿: 本批次7月30日截止</p>
             <p>会议日期:2019年12月26日-28日</p>
-						<p>参会注册截止: 2019年10月31日</p>
+						<p>参会注册截止: 2019年11月30日</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
-						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
