--- a/src/main/resources/templates/page/cn/speakers.html
+++ b/src/main/resources/templates/page/cn/speakers.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
+						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -80,16 +80,62 @@ var _hmt = _hmt || [];
   <div class="page; f-20 lh-40" style="text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">参会嘉宾</div>
-			<dl>
+<dl>
 			  <div class="fl col-4-4" style="display: table;">
-			    <img src="../img/speakers/thomastchen.png" height="150" width="140" />
+			    <img src="../img/speakers/maydongmeiwang.jpg" height="180" width="140" />
 			  </div>
-			  <dt>Prof. Thomas T. Chen</dt>
-			  <dd>Department of Molecular & Cell Biology, University of Connecticut, USA; Center of Excellence for the Oceans, National Taiwan Ocean University, Keelung, Taiwan</dd>
-			  <dd><strong>Short Summary</strong>: His research focuses on (1) structure, evolution and regulation of growth hormone and growth factor genes in finfish and shellfish; (2) molecular actions of growth hormone and growth factor; (3) expression of foreign growth hormone or anti-microbial peptide gene in transgenic fish; (4) anti-tumor activities of the E-peptides of pro-IGF-I; and (5) molecular toxicology: development of molecular biological probes for assessing stress in fish caused by environmental xenobiotic or other pollutants at sub-lethal levels.</dd>
+			  <dt>Prof. May Dongmei Wang</dt>
+			  <dd>Georgia Institute of Technology and Emory University, USA</dd>
+			  <dd><strong>Short Summary</strong>: Dr. May Dongmei Wang is a full professor in the Departments of Biomedical Eng., Electrical and Computer Eng., Computational Science and Eng. at Georgia Institute of Technology and Emory University. She earned BEng from Tsinghua University China, and MS/PhD from Georgia Institute of Technology. Her research is in Biomedical Big Data Analytics with a focus on Biomedical and Health Informatics (BHI) for predictive, personalized, and precision health (pHealth). In FDA-organized MAQC international consortium, she led the comprehensive RNA-Seq analytics pipeline investigation. She has served as an Emerging Area Editor for PNAS, Senior Editor for IEEE Journal of Biomedical and Health Informatics, an Associate Editor for TBME, a standing panelist for NIH BCHI, a panelist for NSF, and a reviewer for panels in multiple countries. Dr. Wang published over 200 peer-reviewed articles in referred journals and conference proceedings with google scholar citations over 9,900. </dd>
+			  <dd><strong>Presentation Title</strong>: Translating AI for Biomedicine and Healthcare: Challenges and Opportunities</dd>
 			<br/>
 			  <div class="clear"></div>
 			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/hadishafiee.jpg" height="150" width="150" />
+			  </div>
+			  <dt>Prof. Hadi Shafiee</dt>
+			  <dd>Brigham and Women's Hospital, Harvard Medical School, USA</dd>
+			  <dd><strong>Short Summary</strong>: Dr. He received his Ph.D. in Biomedical Engineering and Mechanics from Virginia Polytechnique Institute and State University in 2010. After receiving trainings in the development of devices for cell sorting and pathogen detection at Virginia Tech and Harvard-MIT Division of Health Science and Technology, he started his own lab at BWH, HMS in 2014. Dr. Shafiee’s lab strives to develop innovative diagnostic tools to address unmet clinical challenges through integrating biology/medicine, micro- and nanotechnology, consumer electronics, and artificial intelligence. His work has been recognized by some of the major news outlets including CNN, theguardian, Boston Globe, CBS News, STAT, New York Times, etc. He has mentored more than 60 postdoctoral research fellows, and undergraduate and graduate students.</dd>
+			  <dd><strong>Presentation Title</strong>: Mobile Health Diagnostics with Applications in Medicine</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/pornpunvivithanaporn.jpg" height="170" width="140" />
+			  </div>
+			  <dt>Dr. Pornpun Vivithanaporn</dt>
+			  <dd>Associate Professor Dr. of Department of Pharmacology, Faculty of Science, Mahidol University, Thailand</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Pornpun Vivithanaporn focuses on the research of Neuroimmunology, Neurotoxicology, Neurovirology and Cancer pathogenesis. She got her Ph.D. (Pharmacology) in University of Texas Medical Branch, USA. And her current research is Glia cells: inflammation and cancers.</dd>
+			  <dd><strong>Presentation Title</strong>: The potential of leukotriene receptor antagonists as anticancer drugs</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/sardarkhan.jpg" height="150" width="140" />
+			  </div>
+			  <dt>Prof. Dr. Sardar Khan</dt>
+			  <dd>Department of Environmental Sciences, Director Advanced Studies, University of Peshawar, Pakistan</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Sardar khan is working as Professor , department of Environmental sciences, University of Peshawar. He completed his Ph.d in environmental sciences. He also worked as Associate professor in University of Peshawar. He was awarded by Research productivity award of B (2016-17) Category by Pakistan Council of Science. He has over hundred papers published with the total impact factor of 300.</dd>
+			  <dd><strong>Presentation Title</strong>: TBD</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+      <dl>
+        <div class="fl col-4-4" style="display: table;">
+          <img src="../img/speakers/salimalalani.jpg" height="150" width="140" />
+        </div>
+        <dt>Salima Lalani</dt>
+        <dd>Department of Biological Sciences, Sunway University, Malaysia</dd>
+		    <dd><strong>Presentation Title</strong>: Antiviral activity of silymarin and baicalein against EV-A71 in cell cultures</dd>
+			<br/>
+			<br/>
+			<br/>
+			  <div class="clear"></div>
+      </dl>
 			<dl>
 			  <div class="fl col-4-4" style="display: table;">
 			    <img src="../img/speakers/ikuoyamamoto.jpg" height="150" width="140" />
@@ -112,7 +158,7 @@ var _hmt = _hmt || [];
 			</dl>
 			<dl>
 			  <div class="fl col-4-4" style="display: table;">
-			    <img src="../img/speakers/vasilisntziachristos.jpg" height="150" width="140" />
+			    <img src="../img/speakers/vasilisntziachristos.jpg" height="170" width="140" />
 			  </div>
 			  <dt>Prof. Vasilis Ntziachristos</dt>
 			  <dd>Biological Imaging (CBI) at the Technical University of Munich</dd>
@@ -268,17 +314,16 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>摘要投稿: 2019年10月20日截止</p>
+            <p>摘要投稿: 2019年11月20日截止</p>
             <p>全文投稿: 本批次7月30日截止</p>
             <p>会议日期:2019年12月26日-28日</p>
-						<p>参会注册截止: 2019年10月31日</p>
+						<p>参会注册截止: 2019年11月30日</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
             <p>亚太自然科学与工程协会</p>
-						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
