--- a/src/main/resources/templates/page/cn/venue.html
+++ b/src/main/resources/templates/page/cn/venue.html
@@ -43,7 +43,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
+						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -82,7 +82,7 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20 pl-30">
 				<p class="f-b">酒店名称：曼谷塔瓦纳酒店 (The Tawana Bangkok, <a href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a>)<br/>
 				地址：80 Surawongse Road, Bangrak, Bangkok 10500 Thailand<br/>
-				会议室: Murano Room<br/><br/>
+				会议室: Baccarat Room<br/><br/>
 				</p>
 				<p>
 					预订房间: 参会者可通过联系酒店负责人Ms. Wassana Thoolkaew (wassana@tawanabangkok.com)来预定房间，该酒店将为本届会议的参会者提供特殊折扣，详情如下。<br/>
