--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -44,7 +44,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
+						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -85,21 +85,15 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20 pl-30 lh-40">
         <p>
           <strong>Asia-Pacific Association on Natural Science and Engineering<br/>
-					Maejo University (Thailand)
 					</strong>
         </p>
       </div>
 
-      <!--div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px;">Conference Chairs</div>
+      <!--div class="background4 lh-40" style="padding-left:55px; padding-bottom: 10px;">Conference Chair/Co-chairs</div>
       <div class="public_p pb-20">
         <p>
-					<strong>Conference Chair:</strong>
-				</p>
-        <p>
-          <strong>Program Chair:</strong>
-        </p>
-        <p>
-					<strong>Honorary Chair:</strong>
+					<strong>Conference Chair:</strong> 
+					<strong>Conference Co-Chair:</strong> Prof. Hadi Shafiee, Brigham and Women's Hospital, Harvard Medical School, USA
 				</p>
       </div>
 			
@@ -126,6 +120,7 @@ var _hmt = _hmt || [];
 					Khalid Rehman Hakeem, Universiti Putra, Malaysia <br/>
 					KIKUCHI Masumi, University of Tokyo, Japan <br/>
 					Nagendra Kumar Kaushik, Kwangwoon University, Korea <br/>
+					Pornpun Vivithanaporn, Mahidol University, Thailand <br/>
 					Suhaimi Suratman, Institute of Oceanography and Environment, Malaysia <br/>
 					Thi Thuy Pham, VNU-University of Science, Vietnam <br/>
 			    </p>
@@ -138,13 +133,15 @@ var _hmt = _hmt || [];
 					Ahmed Saber Abu-zaiton, Al-albayt University, Jordan <br/>
 					Alex Liu, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					AMAL AL-ABOUDI, University of Jordan, Jordan <br/>
+					Ayush Dogra, Panjab University, India <br/>
 					Ivaylo Christov, Institute of Biophysics and Biomedical Engineering, Bulgaria <br/>
 					Kesaven Bhubalan, Universiti Malaysia Terengganu, Malaysia <br/>
 					Le Nguyen Quoc Khanh, Nanyang Technological University, Singapore <br/>
 					Leyser Rodrigues Oliveira University Centre of Formiga, Brazil <br/>
 					Midhat Nabil Ahmad Salimi, Universiti Malaysia Perlis (UniMAP), Malaysia <br/>
 					Pajaree Thongsanit, Naresuan University, Thailand <br/>
-					Palanisamy Sivanandy, International Medical University(IMU), Malaysia<br/>
+					Palanisamy Sivanandy, International Medical University(IMU), Malaysia <br/>
+					Reshma Rani, Amity University, India <br/>
 					Roshni Paul, Birmingham City University, UK
         </p>
 				</div>
@@ -186,8 +183,8 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
 				<div class="pb-10">
         <ul>
-            <p>Abstract Deadline: Oct. 20, 2019</p>
-						<p>Reg. Deadline: Oct. 31, 2019</p>
+            <p>Abstract Deadline: Nov. 20, 2019</p>
+						<p>Reg. Deadline: Nov. 30, 2019</p>
 						<p>Acceptance: 7-10 working days</p>
 						<p>Conf. Date: Dec. 26-28, 2019</p>
         </ul>
@@ -196,7 +193,6 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
-						<p>Maejo University (Thailand)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
