--- a/src/main/resources/templates/page/en/venue.html
+++ b/src/main/resources/templates/page/en/venue.html
@@ -44,7 +44,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
+						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -84,7 +84,7 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20 pl-30">
 				<p class="f-b">Hotel Name: The Tawana Bangkok, <a class="pointer" href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a><br/>
 				Address: 80 Surawongse Road, Bangrak, Bangkok 10500 Thailand<br/>
-				Conference Room: Murano Room<br/><br/>
+				Conference Room: Baccarat Room<br/><br/>
 				</p>
 				<p>
 				Booking Room: You could contact Ms. Wassana Thoolkaew (wassana@tawanabangkok.com) to book the room, the hetel will provide a special discount for ICABST participant. Details are listed below.<br/>
