--- a/src/main/resources/templates/page/en/submission.html
+++ b/src/main/resources/templates/page/en/submission.html
@@ -44,7 +44,7 @@ var _hmt = _hmt || [];
         <div class="w-1200">
           <div style="width:40%;height:200px; float:left;display:inline-block;">
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
-						<img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png">
+						<!--img style="width: 180px;height: 180px;" src="../img/MaejoUniversityLogo.png"-->
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
@@ -142,8 +142,8 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
 				<div class="pb-10">
         <ul>
-            <p>Abstract Deadline: Oct. 20, 2019</p>
-						<p>Reg. Deadline: Oct. 31, 2019</p>
+            <p>Abstract Deadline: Nov. 20, 2019</p>
+						<p>Reg. Deadline: Nov. 30, 2019</p>
 						<p>Acceptance: 7-10 working days</p>
 						<p>Conf. Date: Dec. 26-28, 2019</p>
         </ul>
@@ -152,7 +152,6 @@ var _hmt = _hmt || [];
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
-						<p>Maejo University (Thailand)</p>
         </ul>
       </div>
         <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
