--- a/src/main/resources/templates/page/cn/speakers.html
+++ b/src/main/resources/templates/page/cn/speakers.html
@@ -14,9 +14,9 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>ICABST会议报告|参会嘉宾--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
+  <title>ICABST会议报告|参会嘉宾--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
   <meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,嘉宾,speaker,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              2019国际前沿生物科学与技术国际会议<br/>(ICABST2019)<br/>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
               <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
@@ -80,17 +80,9 @@ var _hmt = _hmt || [];
   <div class="page; f-20 lh-40" style="text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">参会嘉宾</div>
-<dl>
-			  <div class="fl col-4-4" style="display: table;">
-			    <img src="../img/speakers/maydongmeiwang.jpg" height="180" width="140" />
-			  </div>
-			  <dt>Prof. May Dongmei Wang</dt>
-			  <dd>Georgia Institute of Technology and Emory University, USA</dd>
-			  <dd><strong>Short Summary</strong>: Dr. May Dongmei Wang is a full professor in the Departments of Biomedical Eng., Electrical and Computer Eng., Computational Science and Eng. at Georgia Institute of Technology and Emory University. She earned BEng from Tsinghua University China, and MS/PhD from Georgia Institute of Technology. Her research is in Biomedical Big Data Analytics with a focus on Biomedical and Health Informatics (BHI) for predictive, personalized, and precision health (pHealth). In FDA-organized MAQC international consortium, she led the comprehensive RNA-Seq analytics pipeline investigation. She has served as an Emerging Area Editor for PNAS, Senior Editor for IEEE Journal of Biomedical and Health Informatics, an Associate Editor for TBME, a standing panelist for NIH BCHI, a panelist for NSF, and a reviewer for panels in multiple countries. Dr. Wang published over 200 peer-reviewed articles in referred journals and conference proceedings with google scholar citations over 9,900. </dd>
-			  <dd><strong>Presentation Title</strong>: Translating AI for Biomedicine and Healthcare: Challenges and Opportunities</dd>
-			<br/>
-			  <div class="clear"></div>
-			</dl>
+			<p>ICABST2019大会报告人及参会嘉宾将实时进行更新。<br/>
+			如您希望在大会做报告，请提交参会回执并注明“口头报告”，由组委会统一审阅后一并发布。<br/><br/>
+			</p>
 			<dl>
 			  <div class="fl col-4-4" style="display: table;">
 			    <img src="../img/speakers/hadishafiee.jpg" height="150" width="150" />
@@ -104,12 +96,58 @@ var _hmt = _hmt || [];
 			</dl>
 			<dl>
 			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/emeritusgilnavon.jpg" height="150" width="150" />
+			  </div>
+			  <dt>Prof. Emeritus Gil Navon</dt>
+			  <dd>School of Chemistry, Tel-Aviv University, Israel</dd>
+			  <dd><strong>Short Summary</strong>: Prof. Emeritus Gil Navon focuses on Chemical and Biomedical Applications of NMR and MRI; Application of chemical exchange saturation transfer (CEST) MRI for imaging of tumors; NMR and MRI methods for the study of connective tissues (cartilage, tendon and intervertebral disc); Multinuclear spectroscopic MRI of nerves; New MRI pulse sequences for quantitation of myelin and of liver fibrosis. He has over 300 peer-review publications with the over 8000 citations</dd>
+			  <dd><strong>Presentation Title</strong>: Molecular Imaging of Breast Cancer by Chemical Exchange Saturation Transfer MRI of Glucose Analogs</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
 			    <img src="../img/speakers/pornpunvivithanaporn.jpg" height="170" width="140" />
 			  </div>
 			  <dt>Dr. Pornpun Vivithanaporn</dt>
-			  <dd>Associate Professor Dr. of Department of Pharmacology, Faculty of Science, Mahidol University, Thailand</dd>
+			  <dd>Associate Professor Dr. of Chakri Naruebodindra Medical Institute, Faculty of Medicine Ramathibodi Hospital, and Pharmacology graduate program, Faculty of Science, Mahidol University, Thailand</dd>
 			  <dd><strong>Short Summary</strong>: Dr. Pornpun Vivithanaporn focuses on the research of Neuroimmunology, Neurotoxicology, Neurovirology and Cancer pathogenesis. She got her Ph.D. (Pharmacology) in University of Texas Medical Branch, USA. And her current research is Glia cells: inflammation and cancers.</dd>
 			  <dd><strong>Presentation Title</strong>: The potential of leukotriene receptor antagonists as anticancer drugs</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/johannlechner.jpg" height="160" width="150" />
+			  </div>
+			  <dt>Dr. Johann Lechner</dt>
+			  <dd>Head of Clinic for Integrative Dentistry Munich, Germany</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Lechner was trained at Dental University Munich, Germany. Since 1980 head of Clinic for Integrative Dentistry/Munich. Member of the executive board of the DAH (German Association for Research on Disturbance Fields and Regulation) and for 25 years chairman of science of GZM (International Society for Holistic Dentistry). He is the founder of ICOSIM (International College of Maxillo-Mandibular Osteoimmunology). Numerous lectures at international congresses, universities and medical organizations (i.e. Bern, Switzerland; Vienna, Austria; Washington DC, USA; Sao Paulo, Brazil; Beijing and Shanghai, China.)</dd>
+			  <dd><strong>Presentation Title</strong>: Chemokine RANTES/CCL5 from Jawbone Cavitations - Hidden Interface to Many Systemic-Immunological Diseases detactable by Radiation free Ultrasonography</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/taisunkim.jpg" height="160" width="130" />
+			  </div>
+			  <dt>Prof. Taisun Kim</dt>
+			  <dd>Department of Chemistry, Hallym University, Korea</dd>
+				<dd><strong>Short Summary</strong>: Prof. Taisun Kim got his Chemistry Ph.D. in University of Texas, Austin, United States. He was occupied the dean of the Department of Chemistry by 2013-2015. And now he is the CEO of Biometrix Technology Inc., Bioventure Plaza, Chuncheon, Korea. Currently his research focuses on Infectious disease, Cancer, and Dementia.</dd>
+			  <dd><strong>Presentation Title</strong>: 6 HCV Genotyping 9G testTM for highly accurate screening and genotyping of six HCV genotypes including HCV 1a, 1b, 2, 3, 4 and 6(6a, 6f, 6i and 6n)</dd>
+			<br/>
+			<br/>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/takashijin.jpg" height="150" width="190" />
+			  </div>
+			  <dt>Dr. Takashi Jin</dt>
+			  <dd>Riken Center for Biosystems Dynamics Research, Japan</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Takashi Jin is the team leader of Laboratory for Nano-Bio Probes in Riken Center for Biosystems Dynamics Research. His research team develops novel nano-bio probes for visualization of molecular and cellular dynamics in biological systems. They have synthesized a variety of nano-bio probes such as single-molecule imaging probes using quantum dots, cellular environment sensitive probes, and cellular state controllable probes using external magnetic fields.</dd>
+			  <dd><strong>Presentation Title</strong>: BRET-based dual-colour molecular imaging using a quantum dot and EGFP-luciferase conjugate</dd>
 			<br/>
 			  <div class="clear"></div>
 			</dl>
@@ -124,51 +162,31 @@ var _hmt = _hmt || [];
 			<br/>
 			  <div class="clear"></div>
 			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/shioriminabe.jpg" height="170" width="130" />
+			  </div>
+			  <dt>Dr. Shiori MINABE</dt>
+			  <dd>Laboratory of Anatomy, Nippon Medical School, Japan</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Shiori MINABE got the PHD in School of Bioagricultural Sciences, Nagoya University. She was Assistant Professor in Graduate School of Agricultural and Life Sciences, The University of Tokyo. Her current themes are Fetal programing of Neuroendocrine reproductive functions & Neuroendocrine mechanism of obesity-induced infertility.</dd>
+			  <dd><strong>Presentation Title</strong>: Neonatal exposure to estrogen causes irreversible infertility via specific suppressive action on hypothalamic Kiss1 neurons</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
       <dl>
         <div class="fl col-4-4" style="display: table;">
-          <img src="../img/speakers/salimalalani.jpg" height="150" width="140" />
+          <img src="../img/speakers/imeldarey.jpg" height="160" width="130" />
         </div>
-        <dt>Salima Lalani</dt>
-        <dd>Department of Biological Sciences, Sunway University, Malaysia</dd>
-		    <dd><strong>Presentation Title</strong>: Antiviral activity of silymarin and baicalein against EV-A71 in cell cultures</dd>
+        <dt>Dr. Imelda Rey</dt>
+        <dd>Gastroentero-Hepatology Division, Internal Medicine Department, Universitas Sumatera Utara, Adam Malik General Hospital</dd>
+				<dd><strong>Short Summary</strong>: Dr. Imelda Rey is a staff/lecturer in Internal Medicine Department, Medical Faculty, Universitas Sumatera Utara, as well as the Ministry of Reseach, Technology and Higher Education of The Republic of Indonesia. And she works as a stuff in Adam Malik General Hospital (Indonesia) and internist at Internal Medicine Department, Gastroentero-Hepatology division.</dd>
+		    <dd><strong>Presentation Title</strong>: Association of Serum Tumor Necrosis Factor-α with the Severity of Liver Cirrhosis</dd>
 			<br/>
 			<br/>
 			<br/>
 			  <div class="clear"></div>
       </dl>
-			<dl>
-			  <div class="fl col-4-4" style="display: table;">
-			    <img src="../img/speakers/ikuoyamamoto.jpg" height="150" width="140" />
-			  </div>
-			  <dt>Dr. Ikuo Yamamoto</dt>
-			  <dd>Professor, Organization for Marine Science and Technology, Nagasaki University, Japan</dd>
-			  <dd><strong>Short Summary</strong>: Dr. Ikuo Yamamoto is Vice President and Professor of Nagasaki University in Japan. His areas of work include the development of Autonomous Underwater Vehicle (Leader of AUV “Urashima”, which established the world record autonomous cruising in February 2005), Remotely Operated Vehicle (Champion in underwater vehicle competition of Techno ocean world convention in 2012 and Okinawa offshore robotics contest in 2014,2015,2016; “Kaiko”, 10000m deep cruising in 1995), Robotic fish (the first life-like sea bream robotic fish was created in 1995, followed by dolphin, shark ray ,coelacanth, carp, etc.).</dd>
-			<br/>
-			  <div class="clear"></div>
-			</dl>
-			<dl>
-			  <div class="fl col-4-4" style="display: table;">
-			    <img src="../img/speakers/konstantinbloch.jpg" height="150" width="140" />
-			  </div>
-			  <dt>Dr. Konstantin Bloch</dt>
-			  <dd>Associate Professor, Sackler Faculty of Medicine, Tel Aviv University, Israel</dd>
-			  <dd><strong>Short Summary</strong>: Konstantin Bloch, PhD is head of research team at the Felsenstein Medical Research Center and associate professor at the Sackler Faculty of Medicine, Tel-Aviv University, Israel. Dr. Bloch is an expert in the field of pancreatic islet transplantation. He is the scientific co-founder of the Beta-O2 Technologies, a biomedical company developing a highly oxygenated implantable bio-artificial pancreas for treatment of type 1 diabetes (currently in Phase I/II). Recently, his team developed a proprietary technology of bioengineered insulin delivery to the brain for treatment of Alzheimer's disease. </dd>
-			<br/>
-			  <div class="clear"></div>
-			</dl>
-			<dl>
-			  <div class="fl col-4-4" style="display: table;">
-			    <img src="../img/speakers/vasilisntziachristos.jpg" height="170" width="140" />
-			  </div>
-			  <dt>Prof. Vasilis Ntziachristos</dt>
-			  <dd>Biological Imaging (CBI) at the Technical University of Munich</dd>
-			  <dd><strong>Short Summary</strong>: Vasilis Ntziachristos Ph.D. is Professor of Medicine, Professor of Electrical Engineering and Director of the Chair for Biological Imaging (CBI) at the Technical University of Munich, Director of the Institute for Biological and Medical Imaging (IBMI) at the Helmholtz Zentrum Munchen and Director of Bioengineering at the Helmholtz Pioneer Campus. Professor Ntziachristos is the Editor of the journal Photoacoustics, regularly Chairs in international meetings and councils and has received numerous awards and distinctions, including the Chaire Blaise Pascal (2019), the Gold Medal from the Society for Molecular Imaging (2015), the Gottfried Leibnitz prize from the German Research Foundation (2013), the Erwin Schrödinger Award (2012) and was named one of the world’s top innovators by the Massachusetts Institute of Technology (MIT) Technology Review in 2004.</dd>
-			<br/>
-			  <div class="clear"></div>
-			</dl>
-			<p>ICABST2019大会报告人及参会嘉宾将于近期更新发布。<br/>
-			如您希望在大会做报告，请提交参会回执并注明“口头报告”，由组委会统一审阅后一并发布。<br/><br/>
-			</p>
+
     <div class="background4" style="padding-left:55px; padding-bottom: 10px;">历史嘉宾</div>
 		<dl>
 		  <div class="fl col-4-4" style="display: table;">
